Attempt to fix odd additional bottom overflow issue

--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -41,7 +41,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 h1,
